WIP: adding Reactome DB client, small change in GraphVisualizer